# project-procrustes

./: .cooldown-guard.toml  .gitignore  .oxfmtrc.json  .pre-commit-config.yaml  LICENSE  README.md  THIRD_PARTY_LICENSES.md  backlog.md  coverage.json  design-doc.md  get-data.sh  get-training-set.sh  ischemist.toml  out  package.json  paroutes-audit.md  polishing-tasks.md  pyproject.toml  retrocast-config.yaml  showcase.py  ursa-config.yaml  zensical.toml
.github/: dependabot.yml  release-drafter.yml
.github/workflows/: cooldown-guard-reconcile.yml  cooldown-guard-validate.yml  docs.yml  lint.yml  pr-loc-report.yml  publish-pypi.yml  publish-release.yml  python-oracle.yml  release-drafter.yml  rust.yml  tests.yml  typing.yml  update-major-minor-tags.yml
benchmarks/0.8.1-native-boundary/: README.md  benchmark-results.json
benchmarks/aizynth-mkt-cnv-160/: README.md  benchmark-results.json
comparisons/: mkt-cnv-160-pareto.yaml
data/: SHA256SUMS
data/analysis/: performance-plots.yaml
data/comparisons/: mkt-cnv-160-pareto.yaml
data/retrocast/: SHA256SUMS
docs/: adapter_migration.md  adapters.md  api_usage.md  changelog.md  cli-usage.md  cli.md  concepts.md  format_spec.md  index.md  log.md  quick-start.md
docs/design/: training-set-releases.md
docs/developer-reference/: adapters.md  errors.md  route-embedding.md  route-node-ids.md
docs/developers/: adapters.md  deprecations.md  errors.md  route-node-ids.md
docs/guides/: benchmarks.md  cli.md  library.md  training-sets.md  workflows.md
docs/rationale/: schema-design.md  solv-n-evaluation.md  training-set-releases.md
retrocast-rs/: Cargo.toml
retrocast-rs/crates/retrocast-python/: Cargo.toml
retrocast-rs/crates/retrocast-python/src/: lib.rs
scripts/: 00-score.py  01-analyze.py  01-canonicalize-stock.py  02-compare-new.py  02-compare.py  03-compare-paired.py  04-rank.py  05-tournament.py  06-audit-benchmark-route-embeddings.py  06-check-seed-stability.py  batch-run.sh  benchmark-rust-engine.py  build-manylinux-rdkit.sh  download-data.sh  lib-example-use.py  pr-loc-report.py  pr-size-report.py  process-predictions.py  smoke-native-wheel.py  sync-cluster.sh  verify-hash.py
scripts/ASKCOS/: 1-gather-askcos-results.py
scripts/AiZynthFinder/: 1-download-assets.py  2-prepare-stock.py  3-run-aizyn-mcts.py  4-run-aizyn-retro-star.py
scripts/DirectMultiStep/: 2-run-dms.py  3-combine-results.py
scripts/DreamRetroEr/: 1-create-time-summary.py
scripts/MultistepTTL/: 1-serialize-pickles.py
scripts/PaRoutes/: 1-convert-test-sets.py
scripts/RetroChimera/: 1-gather-chimera-results.py
scripts/RetroStar/: 2-run-og-retro-star.py
scripts/SynLLaMa/: 1-convert-to-json.py
scripts/SynPlanner/: 1-download-assets.py  2-run-synp-eval.py  3-run-synp-rollout.py
scripts/Syntheseus/: 1-run-synth-bfs-local-retro.py  2-run-synth-retro0-local-retro.py
scripts/aizynthfinder/: 1-download-assets.py  2-prepare-stock.py  3-run-aizyn-mcts.py  4-run-aizyn-retro-star.py
scripts/analysis/: 1-visualize-performance.py  2-visualize-sol-funnel.py  3-compute-statistics.py
scripts/askcos/: 1-run-askcos.py
scripts/curation/: augment-buyables-metadata.py
scripts/dev/: canonicalize-stock.py  check-stock-overlap.py  create-benchmark-from-smiles.py  create-tarball.sh  dup-check.py  sync-to-files.py
scripts/directmultistep/: 1-download-assets.sh  2-run-dms.py  3-compute-statistics.py  3-score-predictions.py  dev-adapt-par-predictions.py  ingest-dms-legacy.py  run-ingest.sh
scripts/llm-raw-answers/: 1-convert-to-json.py
scripts/migrations/: 01-reexport-benchmarks-with-hashes.py  02-reexport-benchmarks-with-single-gt.py  03-migrate-benchmarks-to-schema-v2.py  04-migrate-paroutes-training-release-to-schema-v2.py  05-migrate-task-constraints-to-records.py
scripts/paroutes/: 01-cast-paroutes.py  02-create-subsets.py  03-visualize-routes.py  1-cast-raw-routes.py  1-convert-test-sets.py  2-create-train-val.py  3-export-reaction-smiles.py  3-visualize-routes.py  4-create-subsets.py  README.md
scripts/planning/run-retrostar/: 1-download-assets.sh  2-run-og-retro-star.py  pyproject.toml
scripts/planning/run-synllama/: 1-run-synllama-raw.py  2-build-bb-indices.py  3-run-synllama-reconstruction.py  pyproject.toml
scripts/planning/run-synplanner/: 1-download-assets.py  2-run-synp-val.py  3-run-synp-rollout.py  4-run-synp-nmcs.py  pyproject.toml  utils.py
scripts/retrostar/: 2-run-og-retro-star.py
scripts/synplanner/: 1-download-assets.py  2-run-synp-eval.py  2-run-synp-val.py  3-run-synp-rollout.py  4-run-synp-nmcs.py
scripts/syntheseus/: 1-run-synth-bfs-local-retro.py  2-run-synth-retro0-local-retro.py
scripts/ursa-llm/: 1-prepare-raw-results.py
src/retrocast/: __init__.py  _native.pyi  _warnings.py  api.py  chem.py  cli.py  core.py  curation.py  datasets.py  exceptions.py  export.py  hashing.py  io.py  markdown.py  native.py  paths.py  schemas.py
src/ursa/: __init__.py  cli.py  core.py  exceptions.py  io.py  typing.py
tests/: conftest.py  helpers.py  helpers_training_datasets.py  smoke_test.py  smoke_test_library.py  smoke_test_training_datasets.py  test_api.py  test_chem.py  test_chem_descriptors.py  test_chem_identifiers.py  test_cli.py  test_core.py  test_curation.py  test_datasets.py  test_error_contracts.py  test_export.py  test_io.py  test_markdown.py  test_native.py  test_paths.py  test_publish_training_release.py  test_schemas.py
tests/adapters/: base.py  conftest.py  test_aizynth.py  test_aizynth_adapter.py  test_askcos_adapter.py  test_base_adapter.py  test_common.py  test_dms_adapter.py  test_dreamretro.py  test_dreamretro_adapter.py  test_factory.py  test_llm_raw_answers_adapter.py  test_molbuilder_adapter.py  test_multistepttl_adapter.py  test_paroutes.py  test_paroutes_adapter.py  test_resolve.py  test_retrochimera_adapter.py  test_retrostar.py  test_retrostar_adapter.py  test_synllama_adapter.py  test_synplanner.py  test_synplanner_adapter.py  test_syntheseus.py  test_syntheseus_adapter.py  test_ursa_llm_adapter.py
tests/cli/: test_adhoc.py  test_cli.py  test_compare.py  test_handlers.py  (+5 more)
(+721 files in other folders)
