[project]
name = "retrocast"
description = "a framework for ingesting, validating, canonicalizing, and adapting retrosynthesis model outputs to a unified benchmark standard."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Anton Morgunov", email = "anton@ischemist.com" }]
dependencies = [
  "packaging>=25.0",
  "pydantic",
  "pyyaml>=6.0.3",
  "rdkit",
  "rich>=14.2.0",
  "tqdm>=4.67.1",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/ischemist/project-procrustes"
Issues = "https://github.com/ischemist/project-procrustes/issues"

[project.scripts]
retrocast = "retrocast.cli.main:main"

[project.optional-dependencies]
viz = ["ischemist>=0.2.0", "kaleido>=1.1.0", "plotly>=6.3.0"]

[dependency-groups]
dev = [
  "hypothesis>=6.148.2",
  "ipykernel>=6.29.5",
  "pandas<2.2",
  "pytest",
  "pytest-cov",
  "pytest-mock>=3.14.1",
  "pytest-sugar>=1.1.1",
  "requests>=2.32.5",
  "rich>=13.9.4",
  "ruff",
  "ty>=0.0.1a24",
  "types-pyyaml>=6.0.12.20250822",
  "types-tqdm>=4.67.0.20241221",
  "zensical>=0.0.11",
]

[build-system]
requires = ["hatchling>=1.27.0", "hatch-vcs>=0.5.0"]
build-backend = "hatchling.build"

[tool.coverage.run]
omit = [
  "*/analysis/*.py",
  "*/constants/*",
  "*/__init__.py",
  "*/retrocast/types.py",
  "*/retrocast/utils/logging.py",
  "*/retrocast/exceptions.py",
  "*/retrocast/cli/main.py",
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "def __str__",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "pass",
  "logger\\.",
]

[tool.pytest]
markers = [
  "unit: runs in <10ms, tests single functions/classes, no IO",
  "integration: tests workflow glue, uses tmp_path",
  "contract: verifies adapters output valid retrocast objects",
  "regression: runs against frozen json.gz files",
]

[tool.ruff]
line-length = 120
lint.select = [
  "E", # pycodestyle
  "F", # Pyflakes
  "UP", # pyupgrade
  "B", # flake8-bugbear
  "SIM", # flake8-simplify
  "I", # isort
]
lint.ignore = ["E501", "SIM108"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"

[tool.hatch.build.targets.wheel]
packages = ["src/retrocast"]

[tool.hatch.build.targets.sdist]
include = [
  "/LICENSE",
  "/README.md",
  "/pyproject.toml",
  "/src/retrocast",
]

[tool.ty.src]
exclude = ["tests", "scripts"]

[tool.uv]
# Require a short cooling-off window before newly uploaded artifacts are eligible.
required-version = ">=0.9.17"
exclude-newer = "7 days"
exclude-newer-package = {urllib3 = "2026-05-07T16:13:19.596909Z"}
constraint-dependencies = [
    "urllib3==2.7.0",
]

[tool.uv.extra-build-dependencies]
torch-scatter = ["torch"]
