[project]
name = "retrocast"
description = "a framework for ingesting, validating, canonicalizing, and adapting retrosynthesis model outputs to a unified benchmark standard."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Anton Morgunov", email = "anton@ischemist.com" }]
dependencies = []
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/ischemist/project-procrustes"
Issues = "https://github.com/ischemist/project-procrustes/issues"

[dependency-groups]
dev = [
  "hypothesis>=6.148.2",
  "ipykernel>=6.29.5",
  "maturin>=1.10.2",
  "pandas<2.2",
  "pytest",
  "pytest-cov",
  "pytest-mock>=3.14.1",
  "pytest-sugar>=1.1.1",
  "requests>=2.32.5",
  "psutil>=7.2.1",
  "rich>=13.9.4",
  "ruff",
  "ty>=0.0.1a24",
  "types-pyyaml>=6.0.12.20250822",
  "types-tqdm>=4.67.0.20241221",
  "zensical>=0.0.11",
]

[build-system]
requires = ["maturin>=1.10.2,<2"]
build-backend = "maturin"

[tool.pytest.ini_options]
testpaths = ["packages/retrocast-rs/python-tests"]

[tool.ruff]
line-length = 120
src = ["packages/retrocast-rs/python-tests"]
lint.select = [
  "E", # pycodestyle
  "F", # Pyflakes
  "UP", # pyupgrade
  "B", # flake8-bugbear
  "SIM", # flake8-simplify
  "I", # isort
]
lint.ignore = ["E501", "SIM108"]

[tool.maturin]
bindings = "pyo3"
manifest-path = "packages/retrocast-rs/crates/retrocast-python/Cargo.toml"
module-name = "retrocast"
include = [
  { path = "LICENSE", format = ["sdist", "wheel"] },
  { path = "THIRD_PARTY_LICENSES.md", format = ["sdist", "wheel"] },
  { path = "licenses/LLVM-LICENSE.txt", format = ["sdist", "wheel"] },
  { path = "licenses/LGPL-2.1.txt", format = ["sdist", "wheel"] },
  { path = "packages/retrocast-rs/**", format = "sdist" },
]

[tool.ty.src]
exclude = ["packages/retrocast-rs/python-tests", "packages/retrocast-py", "scripts"]

[tool.uv]
# Require a short cooling-off window before newly uploaded artifacts are eligible.
required-version = ">=0.9.17"
exclude-newer = "7 days"
exclude-newer-package = {urllib3 = "2026-05-07T16:13:19.596909Z"}
constraint-dependencies = [
    "urllib3==2.7.0",
]

[tool.uv.extra-build-dependencies]
torch-scatter = ["torch"]
