[project]
name = "run-synllama"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "retrocast>=0.5.4.dev1",
    "synllama>=0.1.0",
]

[tool.uv.sources]
synllama = { git = "https://github.com/anmorgunov/synllama", branch = "main" }
retrocast = { git = "https://github.com/ischemist/project-procrustes", branch = "master" }
