[project]
name = "SynPlanner-Wrapper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11, <3.13"
dependencies = [
  "retrocast>=0.5.2",
  "synplanner>=1.3.2",
]

[tool.uv.sources]
retrocast = { git = "https://github.com/ischemist/project-procrustes", branch = "idk/really" }
